Cursor and text color in dark mode fix

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -8,6 +8,7 @@
   border: 1px solid var(--border-color);
   border-radius: var(--spacing-small);
   transition: all 0.2s ease-in-out;
+  color: var(--font-color);
   background-color: transparent;
   &:focus-within {
     border-color: var(--primary-color-dark);
